@@ -608,6 +608,7 @@ All (GUI):
 - Fix bug in generic wxDataViewCtrl column dragging (jobuz).
 - Add wxMask::GetBitmap() for wxMSW, wxGTK and wxOSX
 - Add wxCheckListBox::GetCheckedItems() (hartwigw).
+- Add wxAUI_TB_PLAIN_BACKGROUND wxAuiToolBar style (Allann Jones).
 
 wxGTK:
 
